# gattv

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  PLAN_MOTION.md  README.md  error.txt  gattv.example.toml  pyproject.toml
src/gattv/: bot.py  camera.py  cli.py  config.py  motion.py
