[project]
name = "gattv"
version = "0.1.0"
requires-python = ">=3.10,<3.11"
dependencies = [
    "numpy>=1.23,<2",
    "opencv-python==4.5.4.60",
    "pydantic>=2.11",
    "python-telegram-bot>=22.3",
    "rich>=14.0",
    "tomli>=2.0",
    "typer>=0.16",
]

[project.scripts]
gattv = "gattv.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "ruff>=0.15.20",
]

[tool.uv]
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'x86_64'",
]
